# OpenEAR

./: AUTHORS  CREDITS  INSTALL  Makefile.am  README  SMILExtract  autogen.sh  clonecomp.pl  live.sh  smile.conf
config/: MFCC12_E_D_A.conf  MFCC12_E_D_A_Z.conf  emo_IS09.conf  emo_large.conf  emobase.conf  emobase_live4.conf
doc/: components.txt  configfile.txt  logger.txt  messages.txt
models/emo/: abc.emobase.classes  abc.emobase.scale  avic.emobase.classes  avic.emobase.scale  emodb.emobase.classes  emodb.emobase.scale  sal_val.emobase.scale
plugindev/: plug_exampleSink.cpp  plug_exampleSink.hpp  pluginMain.cpp
scripts/: vis.m
scripts/modeltrain/: arff-standardize.c  arffToLsvm.pl  buildmodel.pl  makemodel.pl  stddirectory_smileextract.pl
src/: SEMAINExtract.cpp  SMILExtract.cpp  TumFeatureExtractor.cpp  TumFeatureExtractor.h  acf.cpp  acf.hpp  activeMqSink.cpp  activeMqSink.hpp  activeMqSource.cpp  activeMqSource.hpp  amdf.cpp  amdf.hpp  arffSink.cpp  arffSink.hpp  arffSource.cpp  arffSource.hpp  buffer.cpp  buffer.hpp  chroma.cpp  chroma.hpp  chromaFeatures.cpp  chromaFeatures.hpp  commandlineParser.hpp  componentManager.cpp  componentManager.hpp  componentTemplate.hpp  configManager.cpp  configManager.hpp  contourSmoother.cpp  contourSmoother.hpp  csvSink.cpp  csvSink.hpp  dataMemory.cpp  dataMemory.hpp  dataProcessor.cpp  dataProcessor.hpp  dataReader.cpp  dataReader.hpp  dataSelector.cpp  dataSelector.hpp  (+146 more)
svm/: svm.h
